testing/tests/ui/filter_block_ws.stderr
error: failed to parse template source at row 1, column 27 near:
       " %}\nHELLO\n{{v}}\n{%- endfilter %}"
 --> tests/ui/filter_block_ws.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
